--- a/style.css
+++ b/style.css
@@ -378,8 +378,11 @@ margin-bottom: 5px;
 }
 
 .portfolio{
-    padding-top: 120px;
+padding-top: 120px;
+height: 200vh;
 }
+
+
 
 .portfolio .section-title h2{
 text-align: center;
@@ -398,186 +401,87 @@ margin-bottom: 40px;
 text-align: center;
 }
 
----------------------------------------------------------
-    .portfolio #portfolio-flters {
-    padding: 0;
-    margin: 0 auto 20px auto;
-    list-style: none;
-    text-align: center;
-    }
+.hovereffect {
+width: 80%;
+height: auto;
+float: left;
+overflow: hidden;
+position: relative;
+text-align: center;
+cursor: default;
+margin: 5%;
+}
+  
+.hovereffect .overlay {
+width: 80%;
+height: auto;
+position: absolute;
+overflow: hidden;
+top: 0;
+left: 0;
+}
+  
+.hovereffect img {
+display: block;
+position: relative;
+-webkit-transition: all 0.4s ease-in;
+transition: all 0.4s ease-in;
+}
 
-    .portfolio #portfolio-flters li {
-    cursor: pointer;
-    display: inline-block;
-    padding: 8px 16px 10px 16px;
-    font-size: 13px;
-    font-weight: 500;
-    line-height: 1;
-    text-transform: uppercase;
-    color: #444444;
-    margin-bottom: 5px;
-    transition: all 0.3s ease-in-out;
-    border-radius: 50px;
-    }
+.hovereffect .overlay{
+width: 100%;
+}
 
-    .portfolio #portfolio-flters li:hover,
-    .portfolio #portfolio-flters li.filter-active {
-    color: #fff;
-    background: #34b7a7;
-    }
+.hovereffect:hover img {
+filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0 0 0 1 0" /><feGaussianBlur stdDeviation="3" /></filter></svg>#filter');
+filter: grayscale(1) blur(3px);
+-webkit-filter: grayscale(1) blur(3px);
+-webkit-transform: scale(1.2);
+-ms-transform: scale(1.2);
+transform: scale(1.2);
+}
 
-    .portfolio #portfolio-flters li:last-child {
-    margin-right: 0;
-    }
+.hovereffect h2 {
+text-transform: uppercase;
+text-align: center;
+position: relative;
+font-size: 17px;
+padding: 10px;
+background: rgba(0, 0, 0, 0.6);
+}
 
-    .portfolio .portfolio-wrap {
-    transition: 0.3s;
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
-    background: rgba(34, 34, 34, 0.6);
-    }
+.hovereffect a.info {
+display: inline-block;
+text-decoration: none;
+padding: 7px 14px;
+border: 1px solid #fff;
+margin: 50px 0 0 0;
+background-color: transparent;
+}
 
-    .portfolio .portfolio-wrap::before {
-    content: "";
-    background: rgba(34, 34, 34, 0.6);
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    transition: all ease-in-out 0.3s;
-    z-index: 2;
-    opacity: 0;
-    }
+.hovereffect a.info:hover {
+box-shadow: 0 0 5px #fff;
+}
 
-    .portfolio .portfolio-wrap img {
-    transition: all ease-in-out 0.3s;
-    }
+.hovereffect a.info, .hovereffect h2 {
+-webkit-transform: scale(0.7);
+-ms-transform: scale(0.7);
+transform: scale(0.7);
+-webkit-transition: all 0.4s ease-in;
+transition: all 0.4s ease-in;
+opacity: 0;
+filter: alpha(opacity=0);
+color: #fff;
+text-transform: uppercase;
+}
 
-    .portfolio .portfolio-wrap .portfolio-info {
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 3;
-    transition: all ease-in-out 0.3s;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
-    padding: 20px;
-    }
-
-    .portfolio .portfolio-wrap .portfolio-info h4 {
-    font-size: 20px;
-    color: #fff;
-    font-weight: 600;
-    }
-
-    .portfolio .portfolio-wrap .portfolio-info p {
-    color: rgba(255, 255, 255, 0.7);
-    font-size: 14px;
-    text-transform: uppercase;
-    padding: 0;
-    margin: 0;
-    font-style: italic;
-    }
-
-    .portfolio .portfolio-wrap .portfolio-links {
-    text-align: center;
-    z-index: 4;
-    }
-
-    .portfolio .portfolio-wrap .portfolio-links a {
-    color: #fff;
-    margin: 0 5px 0 0;
-    font-size: 28px;
-    display: inline-block;
-    transition: 0.3s;
-    }
-
-    .portfolio .portfolio-wrap .portfolio-links a:hover {
-    color: #78d9cd;
-    }
-
-    .portfolio .portfolio-wrap:hover::before {
-    opacity: 1;
-    }
-
-    .portfolio .portfolio-wrap:hover img {
-    transform: scale(1.2);
-    }
-
-    .portfolio .portfolio-wrap:hover .portfolio-info {
-    opacity: 1;
-    }
-
-    .portfolio-details {
-        padding-top: 0;
-      }
-      
-    .portfolio-details .portfolio-details-slider img {
-    width: 100%;
-    }
-
-    .portfolio-details .portfolio-details-slider .swiper-pagination {
-    margin-top: 20px;
-    position: relative;
-    }
-
-    .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
-    width: 12px;
-    height: 12px;
-    background-color: #fff;
-    opacity: 1;
-    border: 1px solid #34b7a7;
-    }
-
-    .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-    background-color: #34b7a7;
-    }
-
-    .portfolio-details .portfolio-info {
-    padding: 30px;
-    box-shadow: 0px 0 30px rgba(34, 34, 34, 0.08);
-    }
-
-    .portfolio-details .portfolio-info h3 {
-    font-size: 22px;
-    font-weight: 700;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
-    border-bottom: 1px solid #eee;
-    }
-
-    .portfolio-details .portfolio-info ul {
-    list-style: none;
-    padding: 0;
-    font-size: 15px;
-    }
-
-    .portfolio-details .portfolio-info ul li+li {
-    margin-top: 10px;
-    }
-
-    .portfolio-details .portfolio-description {
-    padding-top: 30px;
-    }
-
-    .portfolio-details .portfolio-description h2 {
-    font-size: 26px;
-    font-weight: 700;
-    margin-bottom: 20px;
-    }
-
-    .portfolio-details .portfolio-description p {
-    padding: 0;
-    }
-    
----------------------------------------------------------
+.hovereffect:hover a.info, .hovereffect:hover h2 {
+opacity: 1;
+filter: alpha(opacity=100);
+-webkit-transform: scale(1);
+-ms-transform: scale(1);
+transform: scale(1);
+}
 
 .contact{
     padding-top: 120px;
