--- a/style.css
+++ b/style.css
@@ -379,10 +379,8 @@ margin-bottom: 5px;
 
 .portfolio{
 padding-top: 120px;
-height: 200vh;
+height: 350vh;
 }
-
-
 
 .portfolio .section-title h2{
 text-align: center;
@@ -401,91 +399,42 @@ margin-bottom: 40px;
 text-align: center;
 }
 
-.hovereffect {
-width: 80%;
-height: auto;
-float: left;
-overflow: hidden;
-position: relative;
-text-align: center;
-cursor: default;
-margin: 5%;
-}
-  
-.hovereffect .overlay {
-width: 80%;
-height: auto;
-position: absolute;
-overflow: hidden;
-top: 0;
-left: 0;
-}
-  
-.hovereffect img {
-display: block;
-position: relative;
--webkit-transition: all 0.4s ease-in;
-transition: all 0.4s ease-in;
+#portfolioimg .row img{
+  margin: 0%;
 }
 
-.hovereffect .overlay{
-width: 100%;
+.square-card {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 255px;
+	border-radius: 6px;
+	background: #fff;
+	text-align: left;
+	position: relative;
+	transition: box-shadow 0.3s ease, border 0.3s; ease;
+	box-shadow: 12px 15px 20px 0px rgba(46,61,73,0.15);
+	margin-bottom: 20px;
+	margin-top: 10px;
 }
 
-.hovereffect:hover img {
-filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0 0 0 1 0" /><feGaussianBlur stdDeviation="3" /></filter></svg>#filter');
-filter: grayscale(1) blur(3px);
--webkit-filter: grayscale(1) blur(3px);
--webkit-transform: scale(1.2);
--ms-transform: scale(1.2);
-transform: scale(1.2);
+.square-card:hover {
+	box-shadow: 2px 4px 8px 0px #2e3d494f;
+	border: none;
 }
 
-.hovereffect h2 {
-text-transform: uppercase;
-text-align: center;
-position: relative;
-font-size: 17px;
-padding: 10px;
-background: rgba(0, 0, 0, 0.6);
+.square-card a {
+	width: 100%;
+	height: 100%;
+	display: block;
+	color: #525c65;
+	border-bottom: none;
+	transition: color 0.3s ease;
+	max-width: 348px;
+}
+.square-card:hover {
+	color: #24292d;
 }
 
-.hovereffect a.info {
-display: inline-block;
-text-decoration: none;
-padding: 7px 14px;
-border: 1px solid #fff;
-margin: 50px 0 0 0;
-background-color: transparent;
-}
-
-.hovereffect a.info:hover {
-box-shadow: 0 0 5px #fff;
-}
-
-.hovereffect a.info, .hovereffect h2 {
--webkit-transform: scale(0.7);
--ms-transform: scale(0.7);
-transform: scale(0.7);
--webkit-transition: all 0.4s ease-in;
-transition: all 0.4s ease-in;
-opacity: 0;
-filter: alpha(opacity=0);
-color: #fff;
-text-transform: uppercase;
-}
-
-.hovereffect:hover a.info, .hovereffect:hover h2 {
-opacity: 1;
-filter: alpha(opacity=100);
--webkit-transform: scale(1);
--ms-transform: scale(1);
-transform: scale(1);
-}
-
-.contact{
-    padding-top: 120px;
-}
 
 .contact .section-title h2{
 margin-top: 120px;
@@ -506,7 +455,7 @@ text-align: center;
 }
 
 .row .info .address h4{
-    margin-top: 10px;
+margin-top: 10px;
 }
 
 .contact .info i {
