--- a/style.css
+++ b/style.css
@@ -1,570 +1,557 @@
-
-.navbar-brand{
-font-size: 33px;
-font-weight: 400;
-letter-spacing: 3px;
-text-transform: uppercase;
-color: #222222;
+.navbar-brand {
+    font-size: 33px;
+    font-weight: 400;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    color: #222222;
 }
 
 .navbar {
-padding: 0;
-background-color:#faf2ea;
+    padding: 0;
+    background-color: #faf2ea;
 }
 
 .navbar li {
-position: relative;
-padding: 20px 0 10px 28px;
+    position: relative;
+    padding: 20px 0 10px 28px;
 }
 
-.navbar-nav a{
-display: flex;
-align-items: center;
-justify-content: space-between;
-font-family: 'Raleway', sans-serif;
-font-size: 15px;
-color: #888888;
-white-space: nowrap;
-transition: 0.3s;
-font-weight: 600;
-position: relative;
+.navbar-nav a {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-family: 'Raleway', sans-serif;
+    font-size: 15px;
+    color: #888888;
+    white-space: nowrap;
+    transition: 0.3s;
+    font-weight: 600;
+    position: relative;
 }
 
 .navbar-nav a:hover,
 .navbar-nav li:hover>a {
-color: #34b7a7;
+    color: #34b7a7;
 }
 
+
 .header-social-links {
-padding-right: 35px;
+    padding-right: 35px;
 }
 
 .header-social-links a {
-color: #6f6f6f;
-padding-left: 12px;
-line-height: 0px;
-transition: 0.3s;
-font-size: 20px;
-text-decoration: none;
+    color: #6f6f6f;
+    padding-left: 12px;
+    line-height: 0px;
+    transition: 0.3s;
+    font-size: 20px;
+    text-decoration: none;
 }
 
 .header-social-links a:hover {
-color: #34b7a7;
+    color: #34b7a7;
 }
 
-@media (max-width: 992px){
-.header-social-links{
-padding-left: 100px;
-}
-}
+
 
 #hero {
-width: 100%;
-height: 110vh;
-background: url(images/self\ potrait.jpg) top right;
-background-size:cover;
+    width: 100%;
+    height: 110vh;
+    background: url(images/self\ potrait.jpg) top right;
+    background-size: cover;
 
 }
 
 #hero .container {
-padding-top: 70px;
-position: relative;
+    padding-top: 70px;
+    position: relative;
 }
 
 @media (max-width: 992px) {
-#hero .container {
-padding-top: 58px;
-}
+    #hero .container {
+        padding-top: 58px;
+    }
 }
 
 #hero h1 {
-margin: 0;
-font-size: 48px;
-font-weight: 700;
-line-height: 56px;
-color: #222222;
+    margin: 0;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 56px;
+    color: #222222;
 }
 
 #hero h2 {
-color: #e4e4e4;
-margin: 10px 0 0 0;
-font-size: 22px;
+    color: #e4e4e4;
+    margin: 10px 0 0 0;
+    font-size: 22px;
 }
 
 #hero .btn-about {
-font-family: "Raleway", sans-serif;
-text-transform: uppercase;
-font-weight: 600;
-font-size: 12px;
-letter-spacing: px;
-padding: 12px 40px;
-border-radius: 50px;
-transition: 0.5s;
-margin-top: 30px;
-color: #fff;
-background: #3ac2b2;
-text-decoration: none;;
+    font-family: "Raleway", sans-serif;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 12px;
+    letter-spacing: px;
+    padding: 12px 40px;
+    border-radius: 50px;
+    transition: 0.5s;
+    margin-top: 30px;
+    color: #fff;
+    background: #3ac2b2;
+    text-decoration: none;
+    ;
 }
 
 #hero .btn-about:hover {
-background: #32a497;
+    background: #32a497;
 }
 
 @media (min-width: 1024px) {
-#hero {
-background-attachment: fixed;
-}
+    #hero {
+        background-attachment: fixed;
+    }
 }
 
 @media (max-width: 992px) {
-#hero:before {
-content: "";
-background: #5f5f5fac;
-position: absolute;
-bottom: 0;
-top: 0;
-left: 0;
-right: 0;
-}
+    #hero:before {
+        content: "";
+        background: #5f5f5fac;
+        position: absolute;
+        bottom: 0;
+        top: 0;
+        left: 0;
+        right: 0;
+    }
 
-#hero h1 {
-font-size: 28px;
-line-height: 36px;
-}
+    #hero h1 {
+        font-size: 28px;
+        line-height: 36px;
+    }
 
-#hero h2 {
-font-size: 18px;
-line-height: 24px;
-}
+    #hero h2 {
+        font-size: 18px;
+        line-height: 24px;
+    }
 }
 
 #preloader {
-position: fixed;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
-z-index: 9999;
-overflow: hidden;
-background: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 9999;
+    overflow: hidden;
+    background: #fff;
 }
 
 #preloader:before {
-content: "";
-position: fixed;
-top: calc(50% - 30px);
-left: calc(50% - 30px);
-border: 6px solid #34b7a7;
-border-top-color: #dcf5f2;
-border-radius: 50%;
-width: 60px;
-height: 60px;
--webkit-animation: animate-preloader 5s linear infinite;
-animation: animate-preloader 1s linear infinite;
+    content: "";
+    position: fixed;
+    top: calc(50% - 30px);
+    left: calc(50% - 30px);
+    border: 6px solid #34b7a7;
+    border-top-color: #dcf5f2;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    -webkit-animation: animate-preloader 5s linear infinite;
+    animation: animate-preloader 1s linear infinite;
 }
 
 @-webkit-keyframes animate-preloader {
-0% {
-transform: rotate(0deg);
-}
+    0% {
+        transform: rotate(0deg);
+    }
 
-100% {
-transform: rotate(360deg);
-}
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 @keyframes animate-preloader {
-0% {
-transform: rotate(0deg);
-}
+    0% {
+        transform: rotate(0deg);
+    }
 
-100% {
-transform: rotate(360deg);
-}
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .back-to-top {
-position: fixed;
-visibility: hidden;
-opacity: 0;
-right: 15px;
-bottom: 30px;
-transition: all 0.4s;
+    position: fixed;
+    visibility: hidden;
+    opacity: 0;
+    right: 15px;
+    bottom: 30px;
+    transition: all 0.4s;
 }
 
 .back-to-top.active {
-visibility: visible;
-opacity: 1;
+    visibility: visible;
+    opacity: 1;
 }
 
 .footer {
-background: #e9e8e6;
-padding: 20px 0;
-color: #222222;
-font-size: 14px;
-text-align: center;
+    background: #e9e8e6;
+    padding: 20px 0;
+    color: #222222;
+    font-size: 14px;
+    text-align: center;
 }
 
 .footer .credits {
-padding-top: 5px;
-font-size: 13px;
+    padding-top: 5px;
+    font-size: 13px;
 }
 
 .footer .credits a {
-color: #34b7a7;
+    color: #34b7a7;
 }
 
 .about {
-width: 100%;
-padding-top: 120px; 
-text-align: center;
-font-family: 'Raleway', sans-serif;
+    width: 100%;
+    padding-top: 120px;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
 }
 
 .about .section-title h2 {
-font-weight:bold;
-font-size: 32px;
-color: #1b1b1b;
-text-transform: uppercase;
-padding-bottom: 20px;
-letter-spacing: 2px;
+    font-weight: bold;
+    font-size: 32px;
+    color: #1b1b1b;
+    text-transform: uppercase;
+    padding-bottom: 20px;
+    letter-spacing: 2px;
 }
 
 .about .section-title p {
-font-weight:normal;
-font-size: 17px;
-color: #515151;
-margin-bottom: 40px;
+    font-weight: normal;
+    font-size: 17px;
+    color: #515151;
+    margin-bottom: 40px;
 }
 
 .about .content h3 {
-font-weight: bold;
-font-size: 26px;
-color: #555555;
-float: left;
-margin-bottom: 5px;
-margin-right: 10px;
+    font-weight: bold;
+    font-size: 26px;
+    color: #555555;
+    float: left;
+    margin-bottom: 5px;
+    margin-right: 10px;
 }
 
 .about .fst-italic {
-font-size: 17px;
-color: #555555;
-float: left;
-text-align: left;
-margin-bottom: 5px;
-margin-right: 10px;
+    font-size: 17px;
+    color: #555555;
+    float: left;
+    text-align: left;
+    margin-bottom: 5px;
+    margin-right: 10px;
 }
 
 .about .content ul {
-list-style: none;
-padding: 0;
-text-align: left;
+    list-style: none;
+    padding: 0;
+    text-align: left;
 }
 
 .about .content ul li {
-padding-bottom: 10px;
+    padding-bottom: 10px;
 }
 
 .about .content ul i {
-font-size: 20px;
-padding-right: 2px;
-color: #34b7a7;
+    font-size: 20px;
+    padding-right: 2px;
+    color: #34b7a7;
 }
 
-.about .content p{
-margin-bottom: 0;
-text-align: left;
+.about .content p {
+    margin-bottom: 0;
+    text-align: left;
 }
 
-.row img{
-margin-top: 20px;
+.row img {
+    margin-top: 20px;
 }
 
-#skills .section-title h2{
-padding-top: 80px;
-text-align: center;
-font-family: 'Raleway', sans-serif;
-font-weight: bold;
+#skills .section-title h2 {
+    padding-top: 80px;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
 }
 
 #skills .section-title p {
-font-weight:normal;
-font-size: 17px;
-color: #515151;
-margin-bottom: 40px;
-text-align: center;
+    font-weight: normal;
+    font-size: 17px;
+    color: #515151;
+    margin-bottom: 40px;
+    text-align: center;
 }
 
 .afooter {
-background: #e9e8e6;
-padding: 20px 0;
-color: #222222;
-font-size: 14px;
-text-align: center;
-margin-top: 30px;
+    background: #e9e8e6;
+    padding: 20px 0;
+    color: #222222;
+    font-size: 14px;
+    text-align: center;
+    margin-top: 30px;
 }
 
 .afooter .credits {
-padding-top: 5px;
-font-size: 13px;
+    padding-top: 5px;
+    font-size: 13px;
 }
 
 .afooter .credits a {
-color: #34b7a7;
+    color: #34b7a7;
 }
 
-.resume{
-padding-top: 120px;
-}
-
-.resume .section-title h2{
-text-align: center;
-font-family: 'Raleway', sans-serif;
-font-weight: bold;
-text-transform:uppercase;
-letter-spacing: 2px;
-}
-
-.resume .section-title p {
-font-weight:normal;
-font-size: 17px;
-color: #515151;
-margin-top: 20px;
-margin-bottom: 40px;
-text-align: center;
+.resume {
+    padding-top: 120px;
 }
 
 .resume .resume-title {
-font-size: 26px;
-font-weight: 400;
-margin-top: 20px;
-margin-bottom: 20px;
-color: #222222;
+    font-size: 26px;
+    font-weight: 400;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #222222;
 }
 
 .resume .resume-item {
-padding: 0 0 20px 20px;
-margin-top: -2px;
-border-left: 2px solid #34b7a7;
-position: relative;
+    padding: 0 0 20px 20px;
+    margin-top: -2px;
+    border-left: 2px solid #34b7a7;
+    position: relative;
 }
 
 .resume .resume-item h4 {
-line-height: 18px;
-font-size: 18px;
-font-weight: 600;
-font-family: "Poppins", sans-serif;
-color: #1d685f;
-margin-top: 30px;;
-margin-bottom: 10px;
+    line-height: 18px;
+    font-size: 18px;
+    font-weight: 600;
+    font-family: "Poppins", sans-serif;
+    color: #1d685f;
+    margin-bottom: 10px;
+    padding-top: 30px;
 }
 
 .resume .resume-item h5 {
-font-size: 16px;
-background: #effbf9;
-padding: 5px 15px;
-display: inline-block;
-font-weight: 600;
-margin-bottom: 10px;
-color: #34b7a7;
-}
-
-.resume .resume-item p {
-font-weight:normal;
-font-size: 15px;
-color: #515151;
-margin-top: 25px;
-margin-bottom: 5px;
-}
-
-.portfolio{
-padding-top: 120px;
-height: 280vh;
-}
-
-.portfolio .section-title h2{
-text-align: center;
-font-family: 'Raleway', sans-serif;
-font-weight: bold;
-text-transform:uppercase;
-letter-spacing: 2px;
+    font-size: 16px;
+    background: #effbf9;
+    padding: 5px 15px;
+    display: inline-block;
+    font-weight: 600;
+    margin-bottom: 10px;
+    color: #34b7a7;
 }
 
 
-#portfolioimg .row img{
-margin: 0%;
+.resume .resume-item::before {
+    content: "";
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    border-radius: 50px;
+    left: -9px;
+    top: 0;
+    background: #fff;
+    border: 2px solid #34b7a7;
+}
+
+.portfolio {
+    padding-top: 120px;
+    height: 280vh;
+}
+
+.portfolio .section-title h2 {
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+
+#portfolioimg .row img {
+    margin: 0%;
 }
 
 .square-card {
-margin-left: auto;
-margin-right: auto;
-max-width: 255px;
-border-radius: 6px;
-background: #fff;
-text-align: left;
-position: relative;
-transition: box-shadow 0.3s ease, border 0.3s; ease;
-box-shadow: 12px 15px 20px 0px #2e3d498d;
-margin-bottom: 20px;
-margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 255px;
+    border-radius: 6px;
+    background: #fff;
+    text-align: left;
+    position: relative;
+    transition: box-shadow 0.3s ease, border 0.3s ease;
+    box-shadow: 12px 15px 20px 0px #2e3d498d;
+    margin-bottom: 20px;
+    margin-top: 10px;
 }
 
 .square-card:hover {
-box-shadow: 2px 4px 8px 0px #2e3d498d;
-border: none;
+    box-shadow: 2px 4px 8px 0px #2e3d498d;
+    border: none;
 }
 
 .square-card:hover {
-color: #24292d;
+    color: #24292d;
 }
 
-.square-card .overlay{
-width: 100%;
-height: 100%;
-position: absolute;
-overflow: hidden;
-top: 0;
-left: 0;
+.square-card .overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
 }
 
 .square-card img {
-display: block;
-position: relative;
--webkit-transition: all 0.3s ease-in;
-transition: all 0.4s ease-in;
+    display: block;
+    position: relative;
+    -webkit-transition: all 0.3s ease-in;
+    transition: all 0.4s ease-in;
 }
 
 .square-card:hover img {
-filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0 0 0 1 0" /><feGaussianBlur stdDeviation="3" /></filter></svg>#filter');
-filter: grayscale(1) blur(3px);
--webkit-filter: grayscale(6) blur(5px);
--webkit-transform: scale(1.05);
--ms-transform: scale(1.05);
-transform: scale(1.05);
+    filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0 0 0 1 0" /><feGaussianBlur stdDeviation="3" /></filter></svg>#filter');
+    filter: grayscale(1) blur(3px);
+    -webkit-filter: grayscale(6) blur(5px);
+    -webkit-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    transform: scale(1.05);
 }
 
 .square-card h2 {
-text-transform: uppercase;
-text-align: center;
-position: relative;
-font-size: 17px;
-padding: 10px;
-background: rgba(0, 0, 0, 0.705);
-margin: 0;
+    text-transform: uppercase;
+    text-align: center;
+    position: relative;
+    font-size: 17px;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.705);
+    margin: 0;
 }
 
 .square-card #info {
-display: inline-block;
-text-decoration: none;
-padding: 7px 14px;
-border: 2.5px solid #fff;
-margin: 50px 0 0 65px;
-background-color: transparent;
+    display: inline-block;
+    text-decoration: none;
+    padding: 7px 14px;
+    border: 2.5px solid #fff;
+    margin: 50px 0 0 65px;
+    background-color: transparent;
 }
 
 .square-card #info:hover {
-box-shadow: 0 0 5px #fff;
+    box-shadow: 0 0 5px #fff;
 }
 
-.square-card #info, .square-card h2 {
--webkit-transform: scale(0.9);
--ms-transform: scale(0.9);
-transform: scale(0.9);
--webkit-transition: all 0.4s ease-in;
-transition: all 0.4s ease-in;
-opacity: 0;
-filter: alpha(opacity=0);
-color: #fff;
-text-transform: uppercase;
+.square-card #info,
+.square-card h2 {
+    -webkit-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    transform: scale(0.9);
+    -webkit-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    color: #fff;
+    text-transform: uppercase;
 }
 
-.square-card:hover #info, .square-card:hover h2 {
-opacity: 1;
-filter: alpha(opacity=100);
--webkit-transform: scale(1.1);
--ms-transform: scale(1.1);
-transform: scale(1.1);
+.square-card:hover #info,
+.square-card:hover h2 {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
 }
 
-.contact .section-title h2{
-margin-top: 120px;
-text-align: center;
-font-family: 'Raleway', sans-serif;
-font-weight: bold;
-text-transform:uppercase;
-letter-spacing: 2px;
+.contact .section-title h2 {
+    margin-top: 120px;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
 
 
 .contact .section-title p {
-font-weight:normal;
-font-size: 17px;
-color: #515151;
-margin-top: 20px;
-margin-bottom: 40px;
-text-align: center;
+    font-weight: normal;
+    font-size: 17px;
+    color: #515151;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    text-align: center;
 }
 
-.row .info .address h4{
-margin-top: 10px;
+.row .info .address h4 {
+    margin-top: 10px;
 }
 
 .contact .info i {
-font-size: 20px;
-color: #34b7a7;
-float: left;
-width: 44px;
-height: 44px;
-display: flex;
-justify-content: center;
-align-items: center;
-margin-right: 10px;
+    font-size: 20px;
+    color: #34b7a7;
+    float: left;
+    width: 44px;
+    height: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
 }
 
 .contact .info h4 {
-padding-bottom: 5px;
-font-size: 22px;
-font-weight: 600;
-margin-bottom: 5px;
-color: #222222;
+    padding-bottom: 5px;
+    font-size: 22px;
+    font-weight: 600;
+    margin-bottom: 5px;
+    color: #222222;
 }
 
 .contact .info p {
-padding-bottom: 30px;
-font-size: 14px;
-color: #555555;
+    padding-bottom: 30px;
+    font-size: 14px;
+    color: #555555;
 }
 
 .contact .php-email-form button[type=submit] {
-background: #34b7a7;
-border: 0;
-padding: 10px 30px 12px 30px;
-color: #fff;
-transition: 0.4s;
-border-radius: 50px;
-margin-top: 20px;
+    background: #34b7a7;
+    border: 0;
+    padding: 10px 30px 12px 30px;
+    color: #fff;
+    transition: 0.4s;
+    border-radius: 50px;
+    margin-top: 20px;
 }
 
 .contact .php-email-form button[type=submit]:hover {
-background: #3dc8b7;
+    background: #3dc8b7;
 }
 
 @-webkit-keyframes animate-loading {
-0% {
-transform: rotate(0deg);
-}
+    0% {
+        transform: rotate(0deg);
+    }
 
-100% {
-transform: rotate(360deg);
-}
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 @keyframes animate-loading {
-0% {
-transform: rotate(0deg);
-}
+    0% {
+        transform: rotate(0deg);
+    }
 
-100% {
-transform: rotate(360deg);
-}
+    100% {
+        transform: rotate(360deg);
+    }
 }
