--- a/style.css
+++ b/style.css
@@ -78,13 +78,15 @@
     font-size: 48px;
     font-weight: 700;
     line-height: 56px;
-    color: #222222;
+    color: #e4e4e4;
+    text-shadow: 4px 4px 5px #02000a;
 }
 
 #hero h2 {
     color: #e4e4e4;
     margin: 10px 0 0 0;
     font-size: 22px;
+    text-shadow: 3px 3px 3.5px #010003;
 }
 
 #hero .btn-about {
